# ATS-01-simple

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  Cargo.toml  README.md  a.patch  main.py  pyproject.toml  simple.txt
.github/workflows/: ci.yml  test.yml
ats/: tokenizer.py
ats-project-simple/: main.py  parser.py  tokenizer.py
ats-project-simple/parser/: parser.py  utils.py
ats/ast/: nodes.py
ats/parser/: parser.py  utils.py
ats/pkb/: design_extractor.py  follows.py  parents.py  pkb  pkb.py  query_evaluator.py  utils.py
ats/pql/: pql.py  utils.py
ats_project_simple/: main.py  tokenizer.py
ats_project_simple/parser/: parser.py
tests/: test_parser.py
tests/ast/: test_parsing.py
tests/parser/: test_assign.py  test_benchmark.py  test_call.py  test_expr.py  test_factor.py  test_if.py  test_magic_tokens.py  test_procedure.py  test_program.py  test_term.py  test_while.py
tests/pipe_tester/: 1.simple
tests/pkb/: test_boolean.py  test_calls.py  test_calls_deep.py  test_calls_star.py  test_follows.py  test_follows_deep.py  test_follows_star.py  test_modifies.py  test_multiple_such_that.py  test_next.py  test_next_deep.py  test_other.py  test_parent.py  test_parent_deep.py  test_parent_star.py  test_uses.py
tests/pql/: test_calls.py  test_declarations.py  test_follows.py  test_modifies.py  test_multiple_relations.py  test_parent.py  test_pql_calls.py  test_pql_declarations.py  test_pql_follows.py  test_pql_modifies.py  test_pql_multiple_relations.py  test_pql_multiple_such_that.py  test_pql_next.py  test_pql_parent.py  test_pql_patterns.py  test_pql_query.py  test_pql_uses.py  test_pql_utils.py  test_pql_with.py  test_query.py  test_uses.py  test_with.py
