[tool.poetry]
name = "ats_project_simple"
version = "0.1.0"
description = ""
authors = ["wvffle <github@wvffle.net>"]
readme = "README.md"
packages = [{include = "ats"}]

[tool.poetry.dependencies]
python = "^3.11"
tokenizer = "^3.4.2"
pptree = { git = "https://github.com/kanunnykov/pptree.git", rev = "bug-printing-order" }
dotmap = "^1.3.30"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.1.0"
pytest = "^7.2.2"
pre-commit = "^3.1.1"
isort = "^5.12.0"
pyupgrade = "^3.3.1"
codespell = "^2.2.2"
pytest-cov = "^4.0.0"
nuitka = "^1.5.4"


[tool.pylint.format]
max-line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
